[package]
authors = ["KENTARO OKUDA <lonesometraveler@mac.com>"]
edition = "2018"
readme = "README.md"
name = "stm32f3xx-examples"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
embedded-hal = "0.2.3"
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"

[dependencies.stm32f3xx-hal]
version = "0.4.2"
features = ["stm32f303xc", "rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f3xx-examples"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
